buildscript {
    dependencies {
        constraints {
            classpath ('org.apache.commons:commons-lang3:3.18.0') {
                because("previous versions have vulnerabilities")
            }
            classpath ('org.springframework:spring-core:6.2.11') {
                because("previous versions have vulnerabilities")
            }
            classpath ('com.fasterxml.jackson.core:jackson-core:2.21.1') {
                because("previous versions have vulnerabilities")
            }
            classpath ('io.netty:netty-codec-http2:4.2.13.Final') {
                because("previous versions have vulnerabilities")
            }
            classpath ('io.netty:netty-codec-http:4.2.10.Final') {
                because("previous versions have vulnerabilities")
            }
        }
    }
}

plugins {
    id 'java'
    id 'checkstyle'
    id 'io.freefair.lombok' version '8.10'
    id 'org.springframework.boot' version '3.5.10'
    id 'io.fabric8.java-generator' version "${fabric8_kubernetes_client_version}"
    id 'com.google.protobuf' version '0.9.4'
}

group = 'com.epam.aidial'
version = "0.0.0"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javaGen {
    source = file('src/main/resources/kubernetes/crd')
    target = file("${layout.buildDirectory.get().asFile}/generated/sources/fabric8JavaGenerator/java/main")
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    configureEach {
        exclude group: 'commons-logging', module: 'commons-logging'
        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
        resolutionStrategy {
            force 'com.google.code.gson:gson:2.8.9'
            force 'commons-beanutils:commons-beanutils:1.11.0'
        }
    }
}

checkstyle {
    toolVersion = "10.21.4"
    configDirectory = file("$rootProject.projectDir/checkstyle")

    configProperties['org.checkstyle.google.suppressionfilter.config'] =
            file("$rootDir/checkstyle/checkstyle-suppressions.xml")
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)

    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    implementation 'com.azure:azure-identity:1.18.0'
    implementation 'com.azure:azure-identity-extensions:1.2.7'

    implementation 'net.javacrumbs.shedlock:shedlock-spring:6.3.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:6.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.h2database:h2:2.3.232'
    implementation 'org.postgresql:postgresql:42.7.11'
    implementation 'com.microsoft.sqlserver:mssql-jdbc:13.2.1.jre11'
    implementation 'org.flywaydb:flyway-core:11.14.0'
    implementation 'org.flywaydb:flyway-database-postgresql:11.14.0'
    implementation 'org.flywaydb:flyway-sqlserver:11.14.0'
    implementation 'com.google.cloud.sql:postgres-socket-factory:1.28.0'

    implementation 'io.modelcontextprotocol.sdk:mcp:1.1.1'
    implementation 'com.google.cloud.tools:jib-core:0.27.3'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // https://issues.apache.org/jira/browse/JCLOUDS-1637
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

    implementation 'commons-io:commons-io:2.18.0'
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'org.apache.commons:commons-collections4:4.5.0-M3'
    implementation 'org.springframework.retry:spring-retry'

    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.2.3'

    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.2.Final'

    implementation "io.fabric8:kubernetes-client:${fabric8_kubernetes_client_version}"
    implementation "io.fabric8:knative-client:${fabric8_kubernetes_client_version}"
    implementation "io.fabric8:generator-annotations:${fabric8_kubernetes_client_version}"
    implementation 'io.kubernetes:client-java:22.0.0'

    implementation('org.springframework.boot:spring-boot-starter-log4j2') {
        exclude group: 'org.apache.logging.log4j'
    }
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.24.3'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'org.apache.logging.log4j:log4j-jul:2.24.3'

    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.5.14' // security fix — pinned above Spring Boot 3.5.10 BOM
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'io.opentelemetry:opentelemetry-sdk'
    implementation 'io.opentelemetry:opentelemetry-exporter-otlp'
    implementation 'io.opentelemetry.instrumentation:opentelemetry-log4j-appender-2.17:1.33.6-alpha'

    implementation platform('io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom:2.12.0')
    implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter:2.12.0'

    implementation 'org.hibernate.orm:hibernate-envers'
    implementation 'com.github.f4b6a3:uuid-creator:6.0.0'

    implementation 'org.mapstruct:mapstruct:1.6.0'
    annotationProcessor "org.mapstruct:mapstruct-processor:1.6.0"

    implementation 'io.grpc:grpc-netty-shaded'
    implementation 'io.grpc:grpc-stub:1.75.0'
    implementation 'io.grpc:grpc-protobuf:1.75.0'
    implementation 'com.google.protobuf:protobuf-java:3.25.3'
    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'

    testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
    testImplementation 'io.jsonwebtoken:jjwt:0.9.1'
    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation "org.testcontainers:junit-jupiter:${testcontainers_version}"
    testImplementation "org.testcontainers:testcontainers:${testcontainers_version}"
    testImplementation "org.testcontainers:jdbc:${testcontainers_version}"
    testImplementation "org.testcontainers:postgresql:${testcontainers_version}"
    testImplementation "org.testcontainers:mssqlserver:${testcontainers_version}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    constraints {
        implementation ('org.apache.tomcat.embed:tomcat-embed-core:11.0.22') {
            because("previous versions have vulnerabilities")
        }
        implementation ('com.nimbusds:nimbus-jose-jwt:10.3.1') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.projectreactor.netty:reactor-netty-http:1.2.8') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-codec-http2:4.2.13.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation("io.grpc:grpc-netty-shaded:1.75.0") {
            because("previous versions have vulnerabilities)")
        }
        implementation ('io.netty:netty-codec:4.2.8.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-codec-http:4.2.10.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-codec-dns:4.2.13.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('io.netty:netty-transport-native-epoll:4.2.13.Final') {
            because("previous versions have vulnerabilities")
        }
        implementation ('org.springframework:spring-webmvc:6.2.17') {
            because("previous versions have vulnerabilities")
        }
        implementation ('org.springframework.security:spring-security-core:6.5.4') {
            because("previous versions have vulnerabilities")
        }
        implementation ('org.springframework.security:spring-security-web:6.5.9') {
            because("previous versions have vulnerabilities")
        }
        implementation ('org.springframework:spring-core:6.2.11') {
            because("previous versions have vulnerabilities")
        }
        implementation ('com.fasterxml.jackson.core:jackson-core:2.21.1') {
            because("previous versions have vulnerabilities")
        }
        implementation ('tools.jackson.core:jackson-core:3.1.1') {
            because("previous versions have vulnerabilities")
        }
        implementation("org.bouncycastle:bcprov-jdk18on:1.84") {
            because("previous versions have vulnerabilities")
        }
        checkstyle ('org.codehaus.plexus:plexus-utils:4.0.3') {
            because("previous versions have vulnerabilities")
        }
        checkstyle ('org.apache.commons:commons-lang3:3.18.0') {
            because("previous versions have vulnerabilities")
        }
    }
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.25.3'
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.75.0'
        }
    }
    generateProtoTasks {
        all().each { task ->
            task.plugins {
                grpc {}
            }
        }
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('testFast', Test) {
    description = 'Runs all tests except Postgres and SQL Server functional tests (testcontainers).'
    group = 'verification'
    useJUnitPlatform()
    filter {
        excludeTestsMatching 'com.epam.aidial.deployment.manager.functional.PostgresFunctionalTests'
        excludeTestsMatching 'com.epam.aidial.deployment.manager.functional.SqlServerFunctionalTests'
    }
}

tasks.register('generateDbSchema', JavaExec) {
    dependsOn classes
    mainClass = 'db.schema.GenerateDbSchema'
    classpath = sourceSets.main.runtimeClasspath
    args = ["${projectDir}/docs/db-schema.md"]
}

tasks.withType(JavaCompile).configureEach {
    dependsOn(crd2java)
    options.compilerArgs += "-Werror"
}

sourceSets {
    main {
        java {
            srcDir(file("${buildDir}/generated/sources/fabric8JavaGenerator/java/main"))
        }
    }
}
